third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking-lang-v2.2/lambda/inline-parity/masking.exp
module 0x42::Test {
    fun foo(f: |(u64, u64)|(u64), g: |(u64, u64)|(u64), x: u64, _y: u64): u64 {
        f(x, _y) + g(x, _y)
    }
    public fun main(): u64 {
        foo(|(arg0,arg1)| __lambda__1__main(arg0, arg1), |(arg0,arg1)| __lambda__2__main(arg0, arg1), 10, 100)
    }
    fun __lambda__1__main(x: u64, param$1: u64): u64 {
        x
    }
    fun __lambda__2__main(param$0: u64, y: u64): u64 {
        y
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
  ┌─ masking.move:6:14
  │
6 │         foo(|(arg0,arg1)| __lambda__1__main(arg0, arg1), |(arg0,arg1)| __lambda__2__main(arg0, arg1), 10, 100)
  │              ^
  │              │
  │              Unexpected '('
  │              Expected a variable or struct or variant name
